Add snazzy color for alacritty

--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -1,7 +1,40 @@
 # Colorschemes for my alacritty config
 
 schemes:
-  carbonfox: &carbonfox # Default colors
+    #draw_bold_text_with_bright_colors: true
+  snazzy: &snazzy   
+    primary:
+      background: '#282a36'
+      foreground: '#eff0eb'
+
+    cursor:
+      cursor: '#97979b'
+
+    selection:
+      text:       '#282a36'
+      background: '#feffff'
+
+    normal:
+      black:   '#282a36'
+      red:     '#ff5c57'
+      green:   '#5af78e'
+      yellow:  '#f3f99d'
+      blue:    '#57c7ff'
+      magenta: '#ff6ac1'
+      cyan:    '#9aedfe'
+      white:   '#f1f1f0'
+
+    bright:
+      black:   '#686868'
+      red:     '#ff5c57'
+      green:   '#5af78e'
+      yellow:  '#f3f99d'
+      blue:    '#57c7ff'
+      magenta: '#ff6ac1'
+      cyan:    '#9aedfe'
+      white:   '#eff0eb'
+
+  carbonfox: &carbonfox 
     primary:
       background: "0x161616"
       foreground: "0xf2f4f8"
@@ -300,4 +333,4 @@ schemes:
       end:
         foreground: "#6e6a86"
         background: "#1f1d2e"
-colors: *rose-pine
+colors: *snazzy
