--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -23,7 +23,7 @@ env:
   TERM: alacritty
 
 window:
-  opacity: 0.90
+  opacity: 0.94
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -111,17 +111,17 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrainsMono Nerd Font
+    family: BlexMono Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Medium
-
+    style: Regular
+  
   # Bold font face
   bold:
     # Font family
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: JetBrainsMono Nerd Font
+    family: BlexMono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -135,7 +135,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: JetBrainsMono Nerd Font
+    family: BlexMono Nerd Font
     style: Italic
 
   # Bold italic font face
@@ -145,7 +145,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: JetBrainsMono Nerd Font
+    family: BlexMono Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
@@ -359,6 +359,7 @@ font:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
+
 
 #selection:
 # This string contains all characters that are used as separators for
