--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -1,7 +1,61 @@
 # Colorschemes for my alacritty config
 
 schemes:
-    #draw_bold_text_with_bright_colors: true
+  melange: &melange
+    primary:
+      foreground: '#ECE1D7'
+      background: '#2A2520'
+    normal:
+      black:   '#352F2A'
+      red:     '#B65C60'
+      green:   '#78997A'
+      yellow:  '#EBC06D'
+      blue:    '#9AACCE'
+      magenta: '#B380B0'
+      cyan:    '#86A3A3'
+      white:   '#A38D78'
+    bright:
+      black:   '#4D453E'
+      red:     '#F17C64'
+      green:   '#99D59D'
+      yellow:  '#EBC06D'
+      blue:    '#9AACCE'
+      magenta: '#CE9BCB'
+      cyan:    '#88B3B2'
+      white:   '#C1A78E'
+  mellow: &mellow
+    # Default colors
+    primary:
+      background: '#161617'
+      foreground: '#c9c7cd'
+
+    # Cursor colors
+    cursor:
+      text: '#c9c7cd'
+      cursor: '#757581'
+
+    # Normal colors
+    normal:
+      black:   '#27272a'
+      red:     '#f5a191'
+      green:   '#90b99f'
+      yellow:  '#e6b99d'
+      blue:    '#aca1cf'
+      magenta: '#e29eca'
+      cyan:    '#ea83a5'
+      white:   '#c1c0d4'
+
+    # Bright colors
+    bright:
+      black:   '#353539'
+      red:     '#ffae9f'
+      green:   '#9dc6ac'
+      yellow:  '#f0c5a9'
+      blue:    '#b9aeda'
+      magenta: '#ecaad6'
+      cyan:    '#f591b2'
+      white:   '#cac9dd'
+    draw_bold_text_with_bright_colors: true
   snazzy: &snazzy   
     primary:
       background: '#282a36'
@@ -333,4 +387,4 @@ schemes:
       end:
         foreground: "#6e6a86"
         background: "#1f1d2e"
-colors: *carbonfox
+colors: *melange
