--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,4 +1,4 @@
-theme =  "base16_transparent"
+theme =  "base16_terminal"
 
 [editor]
 idle-timeout = 20
@@ -6,6 +6,7 @@ completion-trigger-len = 0
 line-number = "relative"
 bufferline = "always"
 cursorline = true
+auto-format = true
 rulers = [80]
 
 [editor.cursor-shape]
@@ -31,3 +32,7 @@ character = "▏" # Some characters that work well: "▏", "┆", "┊", "⸽"
 "0" = ["goto_line_start"]
 "$" = ["goto_line_end"]
 "esc" = ["collapse_selection","keep_primary_selection"]
+"C-h" = "jump_view_left"
+"C-l" = "jump_view_right"
+"C-k" = "jump_view_up"
+"C-j" = "jump_view_down"
