Some more themes and font change

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family				JetBrainsMono Nerd Font
-bold_font				JetBrainsMono Nerd Font
-bold_italic_font		JetBrainsMono Nerd Font
-italic_font				JetBrainsMono Nerd Font
+font_family				BlexMono Nerd Font
+bold_font				  BlexMono Nerd Font
+bold_italic_font  BlexMono Nerd Font
+italic_font				BlexMono Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ italic_font				JetBrainsMono Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 13.0
 
 #: Font size (in pts)
 
@@ -188,7 +188,7 @@ cursor_shape block
 
 #: Defines the thickness of the underline cursor (in pts)
 
-cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -759,7 +759,7 @@ background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.9
+background_opacity 1.0
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1508,5 +1508,5 @@ map kitty_mod+f6 debug_config
 
 #: }}}
 #
-include nightfox.conf
+include melange_dark.conf
 shell_integration no-cursor
