--- a/i3/config
+++ b/i3/config
@@ -21,7 +21,9 @@ font pango:DejaVu Sans Mono 8
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
-exec_always picom -b -CGb
+exec_always feh --bg-fill ~/Imagens/wallpapers/mountain.jpg
+
+exec_always picom -CGb
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -196,7 +198,8 @@ bindsym Mod4+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status -c ~/.config/i3/i3status.conf
+  status_command i3status -c ~/.config/i3/i3status.conf
+  position top
 }
 
 #######################################################################
@@ -218,3 +221,21 @@ bindsym Mod4+e exec --no-startup-id "rofimoji -r 'Char' -f emojis nerd_font math
 bindsym XF86MonBrightnessUp exec --no-startup-id "brightnessctl set 10%+"
 
 bindsym XF86MonBrightnessDown exec --no-startup-id "brightnessctl set 10%-"
+
+# Gaps
+
+gaps inner 5
+
+default_border pixel 2
+# Borders
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #424242
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #424242
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #424242
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #424242
