--- a/i3/config
+++ b/i3/config
@@ -60,12 +60,7 @@ bindsym Mod4+Return exec alacritty
 bindsym Mod4+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod4+space exec "rofi -modi drun,run -show run"
-# A more modern dmenu replacement is rofi:
-# bindsym Mod4+d exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindsym Mod4+d exec --no-startup-id i3-dmenu-desktop
+bindsym Mod4+space exec "rofi -modi drun,run -show drun"
 
 # change focus
 bindsym Mod4+$left focus left
@@ -112,17 +107,17 @@ bindsym Mod4+Shift+space floating toggle
 # bindsym Mod4+space focus mode_toggle
 
 # focus the parent container
-bindsym Mod4+a focus parent
+# bindsym Mod4+a focus parent
 
 # focus the child container
 #bindsym Mod4+d focus child
 
 # move the currently focused window to the scratchpad
-bindsym Mod4+Shift+minus move scratchpad
+# bindsym Mod4+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym Mod4+minus scratchpad show
+# bindsym Mod4+minus scratchpad show
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
