--- a/i3/config
+++ b/i3/config
@@ -60,7 +60,7 @@ bindsym Mod4+Return exec alacritty
 bindsym Mod4+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod4+space exec "rofi -modi drun,run -show drun"
+bindsym Mod4+space exec "rofi -modi run -show run"
 
 # change focus
 bindsym Mod4+$left focus left
