--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -736,8 +736,7 @@ key_bindings:
   - { key: NumpadAdd, mods: Control, action: IncreaseFontSize }
   - { key: Minus, mods: Control, action: DecreaseFontSize }
   - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
-  - { key: N, mods: Control, action: SpawnNewInstance }
-  - { key: Q, mods: Control, action: Quit }
+  - { key: T, mods: Control|Shift, action: SpawnNewInstance }
   # - { key: L,         mods: Control,                    action: ClearLogNotice }
   # - { key: L,         mods: Control, mode: ~Vi|~Search, chars: "\x0c"          }
   # - { key: Paste,                                       action: Paste          }
