--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -50,7 +50,7 @@ window:
     y: 0
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: false
+  dynamic_padding: true
 
   # Window decorations
   #
@@ -152,7 +152,7 @@ font:
     # style: Bold Italic
 
   # Point size
-  size: 11
+  size: 12
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -369,16 +369,16 @@ font:
 # When set to `true`, selected text will be copied to the primary clipboard.
 #save_to_clipboard: false
 
-# cursor:
+cursor:
 # Cursor style
-# style:
+  style:
 # Cursor shape
 #
 # Values for `shape`:
 #   - ▇ Block
 #   - _ Underline
 #   - | Beam
-# shape: Beam
+    shape: Beam
 
 # Cursor blinking state
 #
