Raise font size

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ italic_font				FiraCode Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 15.0
 
 #: Font size (in pts)
 
@@ -1481,11 +1481,10 @@ map kitty_mod+f6 debug_config
 
 #: }}}
 #
-include melange_dark.conf
 shell_integration no-cursor
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Material Dark Hard
+# Substrata
 include current-theme.conf
 # END_KITTY_THEME
