--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,47 +1,26 @@
-# vim:ft=kitty
-## name: Gruvbox Material Dark Hard
-## author: Sainnhe Park
-## license: MIT
-## upstream: https://raw.githubusercontent.com/rsaihe/gruvbox-material-kitty/main/colors/gruvbox-material-dark-hard.conf
-## blurb: A modified version of Gruvbox with softer contrasts
+# Substrata Theme <https://github.com/arzg/vim-substrata>
+# Licence: [ISC License](https://opensource.org/licenses/ISC)
 
-background #1d2021
-foreground #d4be98
+foreground #b5b4c9
+background #191c25
 
-selection_background #d4be98
-selection_foreground #1d2021
+selection_foreground #191c25
+selection_background #b5b4c9
+url_color #fe9f7c
 
-cursor #a89984
-cursor_text_color background
-
-# Black
-color0 #665c54
-color8 #928374
-
-# Red
-color1 #ea6962
-color9 #ea6962
-
-# Green
-color2  #a9b665
-color10 #a9b665
-
-# Yellow
-color3  #e78a4e
-color11 #d8a657
-
-# Blue
-color4  #7daea3
-color12 #7daea3
-
-# Magenta
-color5  #d3869b
-color13 #d3869b
-
-# Cyan
-color6  #89b482
-color14 #89b482
-
-# White
-color7  #d4be98
-color15 #d4be98
+color0 #2e313d
+color8 #5b5f71
+color1 #cf8164
+color9 #fe9f7c
+color2 #76a065
+color10 #92c47e
+color3 #ab924c
+color11 #d2b45f
+color4 #8296b0
+color12 #a0b9d8
+color5 #a18daf
+color13 #c6aed7
+color6 #659ea2
+color14 #7dc2c7
+color7 #b5b4c9
+color15 #f0ecfe
