--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -56,7 +56,7 @@ battery all {
         status_chr = "⚡"
         # status_bat = "bat"
         # status_bat = "☉"
-        status_bat = ""
+        status_bat = "󰁹"
         # status_unk = "?"
         status_unk = ""
         # status_full = ""
@@ -72,12 +72,11 @@ memory {
 }
 
 volume master{
-				device = "pulse:alsa_output.pci-0000_00_1b.0.analog-stereo"
-				format = "墳 %volume"
-				format_muted = "婢 %volume"
+				format = "󰓃 %volume"
+				format_muted = "󰓄 %volume"
 }
 
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
-        format = " %d.%m.%Y %H:%M "
+        format = " %d.%m.%Y %H:%M"
 }
