--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family				Iosevka Nerd Font
-bold_font				Iosevka Nerd Font
-bold_italic_font        Iosevka Nerd Font
-italic_font				Iosevka Nerd Font
+font_family				FiraCode Nerd Font
+bold_font				FiraCode Nerd Font
+bold_italic_font        FiraCode Nerd Font
+italic_font				FiraCode Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ italic_font				Iosevka Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -1485,6 +1485,6 @@ shell_integration no-cursor
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark
+# zenbones_dark
 include current-theme.conf
 # END_KITTY_THEME
