--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family				FiraCode Nerd Font
-bold_font				FiraCode Nerd Font
-bold_italic_font        FiraCode Nerd Font
-italic_font				FiraCode Nerd Font
+font_family				Hack Nerd Font
+bold_font				Hack Nerd Font
+bold_italic_font        Hack Nerd Font
+italic_font				Hack Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ italic_font				FiraCode Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 15.0
 
 #: Font size (in pts)
 
@@ -46,7 +46,7 @@ force_ltr no
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  0
+adjust_line_height  2
 adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -1485,6 +1485,6 @@ shell_integration no-cursor
 
 
 # BEGIN_KITTY_THEME
-# zenbones_dark
+# Melange Dark
 include current-theme.conf
 # END_KITTY_THEME
