--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Hasklug Nerd Font
+    family: FiraCode Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Hasklug Nerd Font
+    family: FiraCode Nerd Font
     style: Bold
     # The `style` can be specified to pick a specific face.
     # style: Bold
@@ -133,7 +133,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: Hasklug Nerd Font
+    family: FiraCode Nerd Font
     style: Italic
 
   # Bold italic font face
@@ -143,13 +143,13 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: Hasklug Nerd Font
+    family: FiraCode Nerd Font
     style: Bold Italic
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
 
     # Point size
-  size: 12
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -355,7 +355,6 @@ font:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-
 
   #selection:
   # This string contains all characters that are used as separators for
@@ -718,58 +717,20 @@ cursor:
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
 key_bindings:
-  - {
-      key: PageUp,
-      mods: Shift,
-      mode: ~Alt,
-      action: ScrollPageUp
-    }
-  - {
-      key: PageDown,
-      mods: Shift,
-      mode: ~Alt,
-      action: ScrollPageDown
-    }
-  - {
-      key: Home,
-      mods: Shift,
-      mode: ~Alt,
-      action: ScrollToTop
-    }
-  - {
-      key: End,
-      mods: Shift,
-      mode: ~Alt,
-      action: ScrollToBottom
-    }
+  - { key: PageUp, mods: Shift, mode: ~Alt, action: ScrollPageUp }
+  - { key: PageDown, mods: Shift, mode: ~Alt, action: ScrollPageDown }
+  - { key: Home, mods: Shift, mode: ~Alt, action: ScrollToTop }
+  - { key: End, mods: Shift, mode: ~Alt, action: ScrollToBottom }
   - { key: V, mods: Control|Shift, mode: ~Vi, action: Paste }
   - { key: C, mods: Control|Shift, action: Copy }
-  - {
-      key: F,
-      mods: Control|Shift,
-      mode: ~Search,
-      action: SearchForward
-    }
-  - {
-      key: B,
-      mods: Control|Shift,
-      mode: ~Search,
-      action: SearchBackward
-    }
+  - { key: F, mods: Control|Shift, mode: ~Search, action: SearchForward }
+  - { key: B, mods: Control|Shift, mode: ~Search, action: SearchBackward }
   - { key: Key0, mods: Control, action: ResetFontSize }
   - { key: Equals, mods: Control, action: IncreaseFontSize }
   - { key: Plus, mods: Control, action: IncreaseFontSize }
-  - {
-      key: NumpadAdd,
-      mods: Control,
-      action: IncreaseFontSize
-    }
+  - { key: NumpadAdd, mods: Control, action: IncreaseFontSize }
   - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - {
-      key: NumpadSubtract,
-      mods: Control,
-      action: DecreaseFontSize
-    }
+  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
   - { key: T, mods: Control|Shift, action: SpawnNewInstance }
   # - { key: L,         mods: Control,                    action: ClearLogNotice }
   # - { key: L,         mods: Control, mode: ~Vi|~Search, chars: "\x0c"          }
