--- a/i3/config
+++ b/i3/config
@@ -54,7 +54,7 @@ set $right l
 floating_modifier Mod4
 
 # start a terminal
-bindsym Mod4+Return exec kitty
+bindsym Mod4+Return exec alacritty
 
 # kill focused window
 bindsym Mod4+q kill
