Change default kitty theme

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,27 +1,61 @@
-background #2A2520
-foreground #ECE1D7
-cursor     #ECE1D7
-url_color  #9AACCE
-selection_background    #4D453E
-selection_foreground    #ECE1D7
-tab_bar_background      #352F2A
-active_tab_background   #352F2A
-active_tab_foreground   #EBC06D
-inactive_tab_background #352F2A
-inactive_tab_foreground #C1A78E
-color0  #352F2A
-color1  #B65C60
-color2  #78997A
-color3  #EBC06D
-color4  #9AACCE
-color5  #B380B0
-color6  #86A3A3
-color7  #A38D78
-color8  #4D453E
-color9  #F17C64
-color10 #99D59D
-color11 #EBC06D
-color12 #9AACCE
-color13 #CE9BCB
-color14 #88B3B2
-color15 #C1A78E
+# vim:ft=kitty
+
+## name: GitHub Dark Dimmed
+## author: GitHub
+## license: MIT
+
+#: The basic colors
+
+foreground #adbac7
+background #22272e
+selection_foreground #22272e
+selection_background #539bf5
+
+
+#: Cursor colors
+
+cursor #539bf5
+
+
+#: Tab bar colors
+
+tab_bar_background #1c2128
+active_tab_foreground #adbac7
+active_tab_background #22272e
+inactive_tab_foreground #768390
+inactive_tab_background #1c2128
+
+
+#: The basic 16 colors
+
+#: black
+color0 #545d68
+color8 #636e7b
+
+#: red
+color1 #f47067
+color9 #ff938a
+
+#: green
+color2 #57ab5a
+color10 #6bc46d
+
+#: yellow
+color3 #c69026
+color11 #daaa3f
+
+#: blue
+color4 #539bf5
+color12 #6cb6ff
+
+#: magenta
+color5 #b083f0
+color13 #dcbdfb
+
+#: cyan
+color6 #39c5cf
+color14 #56d4dd
+
+#: white
+color7 #909dab
+color15 #cdd9e5
