--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1485,6 +1485,6 @@ shell_integration no-cursor
 
 
 # BEGIN_KITTY_THEME
-# Melange Dark
+# GitHub Dark Dimmed
 include current-theme.conf
 # END_KITTY_THEME
