--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -7,21 +7,12 @@
 # will be replaced.
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
-# import:
-#   - ~/.config/alacritty/colors.yml
+import:
+  - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-env:
-  # TERM variable
-  #
-  # This value is used to set the `$TERM` environment variable for
-  # each instance of Alacritty. If it is not present, alacritty will
-  # check the local terminfo database and use `alacritty` if it is
-  # available, otherwise `xterm-256color` is used.
-  TERM: alacritty
-
 window:
   opacity: 0.90
   # Window dimensions (changes require restart)
