--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -8,7 +8,7 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
-  - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
+  - ~/.config/alacritty/colors.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
