--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -101,7 +101,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -111,7 +111,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold
     # The `style` can be specified to pick a specific face.
     # style: Bold
@@ -124,7 +124,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Italic
 
   # Bold italic font face
@@ -134,7 +134,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold Italic
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
