--- a/alacritty/colors.toml
+++ b/alacritty/colors.toml
@@ -1,23 +1,26 @@
-[colors.bright]
-black = "#727072"
-blue = "#FC9867"
-cyan = "#78DCE8"
-green = "#A9DC76"
-magenta = "#AB9DF2"
-red = "#FF6188"
-white = "#FCFCFA"
-yellow = "#FFD866"
-
-[colors.normal]
-black = "#403E41"
-blue = "#FC9867"
-cyan = "#78DCE8"
-green = "#A9DC76"
-magenta = "#AB9DF2"
-red = "#FF6188"
-white = "#FCFCFA"
-yellow = "#FFD866"
-
+# Default colors
 [colors.primary]
-background = "#2D2A2E"
-foreground = "#FCFCFA"
+background = '0x252623'
+foreground = '0xf1e9d2'
+
+# Normal colors
+[colors.normal]
+black = '0x1c1e1b'
+red = '0xe75a7c'
+green = '0x8fb573'
+yellow = '0xdbb651'
+blue = '0x57a5e5'
+magenta = '0xaaaaff'
+cyan = '0x70c2be'
+white = '0xf1e9d2'
+
+# Bright colors
+[colors.bright]
+black = '0x5b5e5a'
+red = '0xe75a7c'
+green = '0x8fb573'
+yellow = '0xdbb651'
+blue = '0x57a5e5'
+magenta = '0xaaaaff'
+cyan = '0x70c2be'
+white = '0xfff8f0'
