--- a/.config/alacritty/colors.toml
+++ b/.config/alacritty/colors.toml
@@ -1,26 +1,29 @@
-# Default colors
+# Colors (Nordic)
+
 [colors.primary]
-background = '0x252623'
-foreground = '0xf1e9d2'
+background = '#242933'
+foreground = '#BBBDAF'
 
-# Normal colors
 [colors.normal]
-black = '0x1c1e1b'
-red = '0xe75a7c'
-green = '0x8fb573'
-yellow = '0xdbb651'
-blue = '0x57a5e5'
-magenta = '0xaaaaff'
-cyan = '0x70c2be'
-white = '0xf1e9d2'
+black = '#191C1D'
+red = '#BD6062'
+green = '#A3D6A9'
+yellow = '#F0DFAF'
+blue = '#8FB4D8'
+magenta = '#C7A9D9'
+cyan = '#B6D7A8'
+white = '#BDC5BD'
 
-# Bright colors
 [colors.bright]
-black = '0x5b5e5a'
-red = '0xe75a7c'
-green = '0x8fb573'
-yellow = '0xdbb651'
-blue = '0x57a5e5'
-magenta = '0xaaaaff'
-cyan = '0x70c2be'
-white = '0xfff8f0'
+black = '#727C7C'
+red = '#D18FAF'
+green = '#B7CEB0'
+yellow = '#BCBCBC'
+blue = '#E0CF9F'
+magenta = '#C7A9D9'
+cyan = '#BBDA97'
+white = '#BDC5BD'
+
+[colors.selection]
+text = '#000000'
+background = '#F0DFAF'
