--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ general {
     col.active_border = rgba(fb884ffa)
     col.inactive_border = rgba(fb884f20)
 
-    layout = dwindle
+    layout = master
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -101,7 +101,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = slave
 }
 
 gestures {
@@ -111,7 +111,7 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
 # Example per-device config
@@ -134,6 +134,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, togglefloating, 
+bind = $mainMod, M, togglemaster, 
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, T, togglesplit, # dwindle
 bind = , Print,exec, grim -g "$(slurp)"
