--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,4 +1,4 @@
-theme =  "zenburn"
+theme =  "ayu_evolve"
 
 [editor]
 idle-timeout = 20
@@ -32,7 +32,3 @@ character = "▏" # Some characters that work well: "▏", "┆", "┊", "⸽"
 "0" = ["goto_line_start"]
 "$" = ["goto_line_end"]
 "esc" = ["collapse_selection","keep_primary_selection"]
-"C-h" = "jump_view_left"
-"C-l" = "jump_view_right"
-"C-k" = "jump_view_up"
-"C-j" = "jump_view_down"
