Kanagawa theme and configure hypr wallpaper and lockscreen

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Imagens/wallpapers/nebula.png
-wallpaper = eDP-1,~/Imagens/wallpapers/nebula.jpg
+preload = ~/Imagens/wallpapers/mountain.jpg
+wallpaper = eDP-1,~/Imagens/wallpapers/mountain.jpg
