--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -155,6 +155,7 @@ bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
+bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, J, movefocus, u
 bind = $mainMod, K, movefocus, d
 # will switch to a submap called resize
