feat(kitty): theme monokai spectrum

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,61 +1,47 @@
-# vim:ft=kitty
+background #363537
+foreground #f7f1ff
 
-## name: GitHub Dark Dimmed
-## author: GitHub
-## license: MIT
+cursor #f7f1ff
+cursor_text_color #000000
+selection_foreground #363537
+selection_background #f7f1ff
 
-#: The basic colors
+# dull black
+color0 #363537
+# light black
+color8 #69676c
 
-foreground #adbac7
-background #22272e
-selection_foreground #22272e
-selection_background #539bf5
+# dull red
+color1 #fc618d
+# light red
+color9 #fc618d
 
+# dull green
+color2 #7bd88f
+# light green
+color10 #7bd88f
 
-#: Cursor colors
+# yellow
+color3 #fce566
+# light yellow
+color11 #fce566
 
-cursor #539bf5
+# blue
+color4 #fd9353
+# light blue
+color12 #fd9353
 
+# magenta
+color5 #948ae3
+# light magenta
+color13 #948ae3
 
-#: Tab bar colors
+# cyan
+color6 #5ad4e6
+# light cyan
+color14 #5ad4e6
 
-tab_bar_background #1c2128
-active_tab_foreground #adbac7
-active_tab_background #22272e
-inactive_tab_foreground #768390
-inactive_tab_background #1c2128
-
-
-#: The basic 16 colors
-
-#: black
-color0 #545d68
-color8 #636e7b
-
-#: red
-color1 #f47067
-color9 #ff938a
-
-#: green
-color2 #57ab5a
-color10 #6bc46d
-
-#: yellow
-color3 #c69026
-color11 #daaa3f
-
-#: blue
-color4 #539bf5
-color12 #6cb6ff
-
-#: magenta
-color5 #b083f0
-color13 #dcbdfb
-
-#: cyan
-color6 #39c5cf
-color14 #56d4dd
-
-#: white
-color7 #909dab
-color15 #cdd9e5
+# dull white
+color7 #f7f1ff
+# bright white
+color15 #f7f1ff
