--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@
 monitor = eDP-1,preferred,0x0,1
 monitor = desc:AOC 27G2E1 1FFO8XA000189,preferred,-1920x0,1
 
+env = PATH,$HOME/.local/bin:$PATH
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
