feat(hypr): add swaync notification daemon

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,8 +13,7 @@ env = PATH,$HOME/.local/bin:$PATH
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper
-
+exec-once = waybar & hyprpaper & swaync 
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
