feat(hypr): add hyprshot as screenshot manager

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -128,15 +128,18 @@ misc {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy # clipboard
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, T, togglesplit, # dwindle
-bind = , Print,exec, grim -g "$(slurp)"
-#
+
+# Screenshot a monitor
+bind = $mainMod, PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = , PRINT, exec, hyprshot -m region
+
 bindel =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl  =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
