refactor(hypr): use kitty as a terminal emulator

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,8 +19,7 @@ exec-once = waybar & hyprpaper & swaync
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = alacritty
-$fileManager = Thunar
+$terminal = kitty
 $menu = wofi --show drun
 
 # Some default env vars.
