--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -651,7 +651,7 @@ tab_bar_margin_height 0.0 0.0
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -707,7 +707,7 @@ tab_activity_symbol none
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{title}"
+tab_title_template "{index}: {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -1276,6 +1276,8 @@ map kitty_mod+0 tenth_window
 
 #: Tab management {{{
 
+map kitty_mod+] next_tab
+map kitty_mod+[  previous_tab
 map kitty_mod+right next_tab
 map kitty_mod+left  previous_tab
 map kitty_mod+t     new_tab
