feat(kitty): Change default font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,11 +5,10 @@
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
-
-font_family				IosevkaTermSlab Nerd Font
-bold_font				IosevkaTermSlab Nerd Font
-bold_italic_font        IosevkaTermSlab Nerd Font
-italic_font				IosevkaTermSlab Nerd Font
+font_family				IosevkaTermSlab Nerd Font Mono
+bold_font				IosevkaTermSlab Nerd Font Mono
+bold_italic_font        IosevkaTermSlab Nerd Font Mono
+italic_font				IosevkaTermSlab Nerd Font Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1490,3 +1489,4 @@ shell_integration no-cursor
 # Monokai Pro (Filter Spectrum)
 include current-theme.conf
 # END_KITTY_THEME
+
