--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,10 +28,10 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = br
-    kb_variant =
+    kb_layout = us,br
+    kb_variant = intl
     kb_model =
-    kb_options =
+    kb_options = grp:alt_space_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -46,8 +46,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 5
+    gaps_in = 4
+    gaps_out = 2
     border_size = 2
     col.active_border = rgba(fb884ffa)
     col.inactive_border = rgba(fb884f20)
