--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,br
-    kb_variant = intl
+    kb_variant = intl,
     kb_model =
     kb_options = grp:alt_space_toggle
     kb_rules =
