--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,47 +1,60 @@
-background #363537
-foreground #f7f1ff
+# vim:ft=kitty
 
-cursor #f7f1ff
-cursor_text_color #000000
-selection_foreground #363537
-selection_background #f7f1ff
+## name: Modus Vivendi
+## author: Protesilaos Stavrou
+## license: GNU GPLv3
+## blurb: Highly accessible themes made for GNU Emacs, conforming with the highest
+## standard for colour contrast between background and foreground values (WCAG AAA)
 
-# dull black
-color0 #363537
-# light black
-color8 #69676c
+# The basic colors
+foreground              #ffffff
+background              #000000
+selection_foreground    #ffffff
+selection_background    #5c5c5c
 
-# dull red
-color1 #fc618d
-# light red
-color9 #fc618d
+# Cursor colors
+cursor                  #ffffff
+cursor_text_color       #000000
 
-# dull green
-color2 #7bd88f
-# light green
-color10 #7bd88f
+# kitty window border colors
+active_border_color     #c6daff
+inactive_border_color   #646464
+
+# Tab bar colors
+active_tab_foreground   #ffffff
+active_tab_background   #545454
+inactive_tab_foreground #969696
+inactive_tab_background #2f2f2f
+
+# The basic 16 colors
+# black
+color0 #000000
+color8 #595959
+
+# red
+color1 #ff5f59
+color9 #ff7f9f
+
+# green
+color2  #44bc44
+color10 #70b900
 
 # yellow
-color3 #fce566
-# light yellow
-color11 #fce566
+color3  #d0bc00
+color11 #fec43f
 
 # blue
-color4 #fd9353
-# light blue
-color12 #fd9353
+color4  #2fafff
+color12 #79a8ff
 
 # magenta
-color5 #948ae3
-# light magenta
-color13 #948ae3
+color5  #feacd0
+color13 #b6a0ff
 
 # cyan
-color6 #5ad4e6
-# light cyan
-color14 #5ad4e6
+color6  #00d3d0
+color14 #6ae4b9
 
-# dull white
-color7 #f7f1ff
-# bright white
-color15 #f7f1ff
+# white
+color7  #989898
+color15 #ffffff
