--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1486,7 +1486,7 @@ shell_integration no-cursor
 
 
 # BEGIN_KITTY_THEME
-# Monokai Pro (Filter Spectrum)
+# Modus Vivendi
 include current-theme.conf
 # END_KITTY_THEME
 
