--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,6 +126,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, togglefloating, 
+bind = $mainMod SHIFT, F, fullscreen, 
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, T, togglesplit, # dwindle
 
