--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,60 +1,79 @@
 # vim:ft=kitty
 
-## name: Modus Vivendi
-## author: Protesilaos Stavrou
-## license: GNU GPLv3
-## blurb: Highly accessible themes made for GNU Emacs, conforming with the highest
-## standard for colour contrast between background and foreground values (WCAG AAA)
+## name:     Gruber-dark
+## author:   ring0-rootkit
+## license:  MIT
+## upstream: https://github.com/ring0-rootkit/gruber-darker-kitty/blob/main/gruber.conf
+
+
 
 # The basic colors
-foreground              #ffffff
-background              #000000
-selection_foreground    #ffffff
-selection_background    #5c5c5c
+foreground              #e4e4e4
+background              #181818
+selection_foreground    #181818
+selection_background    #F5F5F5
 
 # Cursor colors
-cursor                  #ffffff
+cursor                  #FFDD33
 cursor_text_color       #000000
 
-# kitty window border colors
-active_border_color     #c6daff
-inactive_border_color   #646464
+# URL underline color when hovering with mouse
+url_color               #FF4F58
+
+# Kitty window border colors
+active_border_color     #96A6C8
+inactive_border_color   #565F73
+bell_border_color       #C73C3F
+
+# OS Window titlebar colors
+wayland_titlebar_color  #181818
+macos_titlebar_color    #181818
 
 # Tab bar colors
-active_tab_foreground   #ffffff
-active_tab_background   #545454
-inactive_tab_foreground #969696
-inactive_tab_background #2f2f2f
+active_tab_foreground   #101010
+active_tab_background   #F43841
+inactive_tab_foreground #E4E4E4
+inactive_tab_background #282828
+tab_bar_background      #101010
 
-# The basic 16 colors
+# Colors for marks (marked text in the terminal)
+mark1_foreground #181818
+mark1_background #96A6C8
+mark2_foreground #181818
+mark2_background #F43841
+mark3_foreground #181818
+mark3_background #73D936
+
+# The 16 terminal colors
+
 # black
-color0 #000000
-color8 #595959
+color0 #101010
+color8 #453D41
 
 # red
-color1 #ff5f59
-color9 #ff7f9f
+color1 #F43841
+color9 #F43841
 
 # green
-color2  #44bc44
-color10 #70b900
+color2 #73D936
+color10 #73D936
 
 # yellow
-color3  #d0bc00
-color11 #fec43f
+color3 #FFDD33
+color11 #FFDD33
 
 # blue
-color4  #2fafff
-color12 #79a8ff
+color4 #96A6C8
+color12 #96A6C8
 
 # magenta
-color5  #feacd0
-color13 #b6a0ff
+color5 #9E95C7
+color13 #9E95C7
 
 # cyan
-color6  #00d3d0
-color14 #6ae4b9
+color6 #95A99F
+color14 #95A99F
 
 # white
-color7  #989898
-color15 #ffffff
+color7 #E4E4E4
+color15 #FFFFFF
