--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,10 +5,10 @@
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
-font_family				IosevkaTermSlab Nerd Font Mono
-bold_font				IosevkaTermSlab Nerd Font Mono
-bold_italic_font        IosevkaTermSlab Nerd Font Mono
-italic_font				IosevkaTermSlab Nerd Font Mono
+# font_family				IosevkaTermSlab Nerd Font Mono
+# bold_font				IosevkaTermSlab Nerd Font Mono
+# bold_italic_font        IosevkaTermSlab Nerd Font Mono
+# italic_font				IosevkaTermSlab Nerd Font Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1486,7 +1486,15 @@ shell_integration no-cursor
 
 
 # BEGIN_KITTY_THEME
-# Modus Vivendi
+# Gruber darker
 include current-theme.conf
 # END_KITTY_THEME
 
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrainsMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
