--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -650,7 +650,7 @@ tab_bar_margin_height 0.0 0.0
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style powerline
+tab_bar_style slant
 
 #: The tab bar style, can be one of:
 
