chore(shell): variables, opam and swaylock

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,6 +7,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,preferred,0x0,1
+monitor = HDMI-A-1,preferred,-1920x0,1
 monitor = desc:AOC 27G2E1 1FFO8XA000189,preferred,-1920x0,1
 
 env = PATH,$HOME/.local/bin:$PATH
@@ -152,7 +153,7 @@ bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
-bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod SHIFT, L, exec, swaylock -c 333333
 bind = $mainMod, J, movefocus, u
 bind = $mainMod, K, movefocus, d
 # will switch to a submap called resize
